<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mauriciogodinez.splashtest.DetallePromocionActivity"
    tools:showIn="@layout/activity_detalle_promocion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="@dimen/text_margin"
            android:layout_width="159dp"
            android:layout_height="78dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logopapajohns"
            android:contentDescription="@string/papa_johns" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center_horizontal"
            android:text="@string/papa_johns" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contenido_papa_johns" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/detalle_papa_johns" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
